@@ -3,6 +3,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
 4.0.3
   b - fix qdel -p all - was performing a qdel all. TRQ-947
   b - fix some memory leaks in 4.0.2 on the mom and server TRQ-944
+  c - TRQ-973. Fix a possibility of a segfault in netcounter_incr()
 
 4.0.2
   e - Change so init.d script variables get set based on the configure command.
